Prevent double deletion of widgets that are managed by their QObject parents but need to be managed by KCommonDecoration as well. Thanks a lot Thomas, I went for "adjusted* b) (and fix c!)".

Feedback regarding 201404 would be great.

BUG: 201404

svn path=/trunk/KDE/kdebase/workspace/; revision=1013904